Layout and whitespace fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,14 @@ h2 {
 p {
   text-align: justify;
   font-size: large;
+  line-height: 1.6;
 }
 .subtitle{
   font-size: larger;
   margin-left: 15%;
   margin-right: 15%;
   text-align: center;
+  line-height: 1.6;
 }
 .page{
   width: auto;    
@@ -83,7 +85,7 @@ span.pacific{
 /* Style the tab */
 .tab {
   overflow: hidden;
-  background-color: #c0e6ba;
+  background-color: #b6c35c;
   margin: 15px;
   border: 1px solid #ccc;
 }
@@ -104,12 +106,12 @@ span.pacific{
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-  background-color: #46ab5e;
+  background-color: #54a054;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-  background-color: #46ab5e;
+  background-color: #54a054;
 }
 
 /* Style the tab content */
